# p2v-transfer

./: .gitattributes  .gitignore  Makefile.am  README.rst  configure.ac
doc/: Makefile.am  design.rst  instance-p2v-target.rst
instance-p2v-target/: Makefile.am  common.sh.in  p2v-target.conf.in
instance-p2v-target/fixes/: 10_fix_fstab  20_remove_persistent_rules  30_add_console_inittab  30_add_console_upstart  40_copy_hostname
instance-p2v-target/fixes/fixlib/: __init__.py  fix_fstab.py
instance-p2v-target/hooks/: clear-root-password  install-fixes.in  ramboot  xen-hvc0
instance-p2v-target/scripts/: make_ramboot_initrd.py
instance-p2v-target/test/: fix_fstab_test.py  make_ramboot_initrd_test.py
instance-p2v-target/test/testdata/: fstab_uuid_in  fstab_uuid_out  movetoram
p2v-transfer/: Makefile.am  p2v_transfer.py
p2v-transfer/test/: p2v_transfer_test.py
